feat(backend): configure Spotless formatter, industry-standard Checkstyle rules, and format Java codebase